--- a/form.html
+++ b/form.html
@@ -7,7 +7,7 @@
       background-attachment: fixed;
   }
 </style> 
-<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xyyqpwbg" method="post">
+<form id="fs-frm" name="simple-contact-form" accept-charset="utf-8" action="https://formspree.io/f/xrgwlboa" method="post">
   <a href="/"><img id="banner" src="https://i.ibb.co/5sZ8VJ5/Screenshot-2023-09-16-at-6-43-34-AM.png" hieght="300px" width="500px"></a>
   <fieldset id="fs-frm-inputs">
     <label for="full-name" style="Color:rgb(76, 73, 73)">Full Name</label>
